--- a/index.css
+++ b/index.css
@@ -59,9 +59,8 @@ body {
   border: 4px solid var(--color-primary);
   -webkit-box-shadow: 12px 12px 0 0 var(--color-primary);
   box-shadow: 12px 12px 0 0 var(--color-primary);
-  padding: 6rem 2rem 3rem 2rem;
   position: relative;
-  background: repeating-radial-gradient(
+  /* background: repeating-radial-gradient(
       var(--color-secondary),
       var(--color-secondary) 6px,
       var(--color-primary) 6px,
@@ -83,13 +82,13 @@ body {
       var(--color-primary) 60px,
       var(--color-primary) 64px
     );
-  background-color: var(--color-secondary);
   background-position: right 5px, right 30px top 5px, 0 0;
   background-size: 50px 50px, 50px 50px, 100% 64px;
-  background-repeat: no-repeat;
+  background-repeat: no-repeat; */
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  background-color: var(--color-secondary);
 }
 
 .animated-text {
@@ -224,17 +223,16 @@ body {
   }
 }
 .version {
-  position: absolute;
-  top: 3vh;
   font-weight: 600;
+  margin-left: 35px;
 }
 
 .links{
-  position: absolute;
-  top: 3vh;
-  right: 1vh;
+  height: 60px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
-
 .links ul{
   display: flex;
   justify-content: center;
@@ -243,15 +241,18 @@ body {
 .links ul li{
   list-style-type: none;
   color: #000;
+  padding-right: 20px;
 }
 .links ul li a{
   text-decoration: none;
   color: #000;
 }
 .img-container {
-  height: 80%;
+  height: 67%;
   display: flex;
   justify-content: center;
+  align-items: center;
+  margin-top: 25px;
   
 }
 .img-container img {
@@ -267,4 +268,11 @@ body {
   font-size: 50px;
   font-weight: bold;
   padding-left: 3%;
+}
+.v-links{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color:#ddd;
+  border-bottom: 4px solid black;
 }
