--- a/scss/index.scss
+++ b/scss/index.scss
@@ -3056,3 +3056,15 @@ $bp-lg: 800px;
     width: 250px;
   }
 }
+@media screen and (max-width:500px) {
+  .sponsor__card{
+    height: 6rem !important;
+    width: 20rem !important;
+  }
+  .koiii{
+    width: 90px !important;
+  }
+  .sponsor__card img{
+    width: 12rem !important;
+  }
+}
