--- a/scss/index.scss
+++ b/scss/index.scss
@@ -3056,8 +3056,8 @@ $bp-lg: 800px;
     width: 250px;
   }
 }
-@media screen and (max-width:500px) {
-  .sponsor__card{
+@media screen and (min-width:400px) and (max-width:500px) {
+  .sponsor__card{ 
     height: 6rem !important;
     width: 20rem !important;
   }
@@ -3066,5 +3066,33 @@ $bp-lg: 800px;
   }
   .sponsor__card img{
     width: 12rem !important;
+  }
+  .noback2{
+    height: 4rem !important;
+    width: 7rem !important;
+  }
+  .anchor{
+    width: 90% !important;
+    
+  }
+}
+@media screen and (max-width:400px) {
+  .sponsor__card{ 
+    height: 6rem !important;
+    width: 20rem !important;
+  }
+  .koiii{
+    width: 90px !important;
+  }
+  .sponsor__card img{
+    width: 12rem !important;
+  }
+  .noback2{
+    height: 3rem !important;
+    width: 6rem !important;
+  }
+  .anchor{
+    width: 90% !important;
+    
   }
 }
