--- a/scss/index.scss
+++ b/scss/index.scss
@@ -3292,6 +3292,7 @@ box-shadow: 0px 9px 13px 0px $black-30;
 .menu {
   display: block;
   width: 100%;
+  height: 90vh;
   padding-left: 20%;
   padding-right: 20%;
   //opacity: 0;
@@ -3300,14 +3301,13 @@ box-shadow: 0px 9px 13px 0px $black-30;
   li {
     text-align: left;
     display: block;
-    padding: 15px 0;
+    padding: 13px 0;
   }
   
   a {
     text-decoration: none;
     color: $dark-grey;
     display: inline-block;
-    padding: 10px 0;
     font-size: 2rem;
     position: relative;
     
@@ -3346,12 +3346,12 @@ box-shadow: 0px 9px 13px 0px $black-30;
   
   &.middle {
     top: 30vh;
-    left: -60vh;
+    left: -55vh;
     transform: rotate(-45deg) scaleY(0);
   }
   &.top {
-    left: -34%;
-    top: -25vh;
+    left: -36%;
+    top: -30vh;
   transform: rotate(-45deg) translateY(-152%);
     //top: -25%;
   }
