--- a/scss/index.scss
+++ b/scss/index.scss
@@ -501,7 +501,7 @@ body {
 .btn-glitch.btn-glitch-active::before {
   right: -2px;
   background-color: #3ffeff;
-  animation: colorshift-blue 2.6s infinite;
+  animation: colorshift-black 2.6s infinite;
   animation-timing-function: step-end;
 }
 
@@ -546,17 +546,17 @@ body {
     background-color: transparent;
   }
 }
-@keyframes colorshift-blue {
+@keyframes colorshift-black {
   0%,
   7% {
-    background-color: #3ffeff;
+    background-color: #000;
   }
   8%,
   18% {
     background-color: transparent;
   }
   19% {
-    background-color: #3ffeff;
+    background-color: #000;
     width: 2px;
   }
   23%,
@@ -1973,7 +1973,7 @@ $bg:black;
 $text: black;
 $gray: black;
 $lightgray: black;
-$blue:black;
+$blue:blue;
 
 .container-faq {
   width: 48rem;
@@ -3131,11 +3131,11 @@ $light-grey-A: #f0f0f0;
 $grey: #9f9e9f;
 $dark-grey: #000;
 $white: #ffffff;
-$blue: #0190ec;
+$blue: #000;
 
 //BMW
-$light-blue: #6295ca;
-$dark-blue: #13274c;
+$light-blue: #000;
+$dark-blue: #000;
 $red: #d1253b;
 
 //ANIMATIONS stuff
@@ -3275,6 +3275,7 @@ box-shadow: 0px 9px 13px 0px $black-30;
 .inner-container, .menu-container {
   position: absolute;
   height: 100%;
+  overflow: hidden;
   width: 100%;
   left: 0;
   top: 0;
@@ -3310,6 +3311,7 @@ box-shadow: 0px 9px 13px 0px $black-30;
     display: inline-block;
     font-size: 2rem;
     position: relative;
+    font-style: normal;
     
     &:hover {
       &:before {
@@ -3346,11 +3348,11 @@ box-shadow: 0px 9px 13px 0px $black-30;
   
   &.middle {
     top: 30vh;
-    left: -55vh;
+    left: -58vh;
     transform: rotate(-45deg) scaleY(0);
   }
   &.top {
-    left: -36%;
+    left: -26vh;
     top: -30vh;
   transform: rotate(-45deg) translateY(-152%);
     //top: -25%;
