--- a/scss/index.scss
+++ b/scss/index.scss
@@ -3504,3 +3504,23 @@ box-shadow: 0px 9px 13px 0px $black-30;
     fill:#a6adb1;
     transform: scale(1.1);
 }
+.pre-loader {
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  background: black url("/img/loader/animation_500_l1w71r0b.gif") no-repeat center center;
+  z-index: 1000000;
+  background-size: 20%;
+  background-position: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+}
+.loading{
+  position: relative;
+  top: 40px;
+  font-style: normal;
+  letter-spacing: 1.3px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
