Updated terminus track

--- a/scss/index.scss
+++ b/scss/index.scss
@@ -2571,6 +2571,7 @@ margin-right: 20px;
 .modgud{
   position: relative;
   bottom: 15px;
+  top: -15px;
   font-size: 15px;
   text-align: center;
 }
