--- a/scss/index.scss
+++ b/scss/index.scss
@@ -2769,6 +2769,9 @@ $bp-lg: 800px;
   color: whitesmoke;
   width: 350px;
   height: 350px;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   @media (min-width: $bp-md) {
     height: 350px;
   }
@@ -2824,6 +2827,7 @@ $bp-lg: 800px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   width: 100%;
   padding: 1rem;
   transition: transform var(--d) var(--e);
@@ -2852,7 +2856,7 @@ $bp-lg: 800px;
   }
   
   .content-pr {
-    transform: translateY(calc(100% - 4.5rem));
+    // transform: translateY(calc(100% - 4.5rem));
     
     > *:not(.title-pr) {
       opacity: 0;
@@ -2878,6 +2882,9 @@ $bp-lg: 800px;
         transform: translateY(0);
         transition-delay: calc(var(--d) / 8);
       }
+    }
+    .title-pr{
+      opacity: 0;
     }
   }
   
@@ -3541,4 +3548,22 @@ box-shadow: 0px 9px 13px 0px $black-30;
   .nav-main{
     display: none;
   }
+}
+.content-pr h2{
+  position: absolute;
+  left: 40px;
+  right: 40px;
+  display: inline-block;
+  background: #000000;
+  -webkit-transform: skew(-10deg) rotate(-10deg) translate(0, -50%) scale(0.9);
+  transform: skew(-10deg) rotate(-10deg) translate(0, -50%) scale(0.9);
+  padding: 12px 5px;
+  margin: 0;
+  top: 50%;
+  font-weight: 400;
+  box-sizing: border-box;
+    transition: all 0.4s ease-in-out;
+    font-size: 32px;
+    line-height: 48px;
+    letter-spacing: 0px;
 }
