--- a/scss/index.scss
+++ b/scss/index.scss
@@ -520,6 +520,7 @@ body {
   align-items: center;
   flex-direction: column;
   width: 100%;
+  z-index: 1000;
 }
 .body-section .half {
   width: 100%;
@@ -574,6 +575,7 @@ body {
   justify-content: right;
   align-items: right;
   top: 85vh;
+  z-index: 10001;
 }
 .icon {
   padding: 20px;
@@ -3594,4 +3596,9 @@ box-shadow: 0px 9px 13px 0px $black-30;
 }
 .title-pr span{
   font-family: 'Raleway', sans-serif;
+}
+@media screen and (max-width:600px){
+  .icon-container{
+    top: 4vh;
+  }
 }
