--- a/scss/index.scss
+++ b/scss/index.scss
@@ -520,7 +520,6 @@ body {
   align-items: center;
   flex-direction: column;
   width: 100%;
-  z-index: 1000;
 }
 .body-section .half {
   width: 100%;
@@ -575,7 +574,7 @@ body {
   justify-content: right;
   align-items: right;
   top: 85vh;
-  z-index: 10001;
+  z-index: -1;
 }
 .icon {
   padding: 20px;
@@ -3308,13 +3307,11 @@ box-shadow: 0px 9px 13px 0px $black-30;
   height: 90vh;
   padding-left: 20%;
   padding-right: 20%;
-  //opacity: 0;
-  //visibility: hidden;
   
   li {
     text-align: left;
     display: block;
-    padding: 13px 0;
+    padding: 3px 0;
   }
   
   a {
@@ -3600,5 +3597,162 @@ box-shadow: 0px 9px 13px 0px $black-30;
 @media screen and (max-width:600px){
   .icon-container{
     top: 4vh;
+  }
+}
+
+@import url(https://fonts.googleapis.com/css?family=Ek+Mukta:200);
+
+
+$cubic: cubic-bezier(0.4, 0.01, 0.165, 0.99);
+$mukta: 'Ek Mukta', sans-serif;;
+
+$menuItems: 7;
+.window{
+  display: none;
+}
+    .header {
+        position: fixed;
+        display: block;
+        top: 0;
+        left: 0;
+        height: 50px;
+        width: 100%;
+        background: rgba(#000,0.8);
+        overflow: hidden;
+        transition: all 0.5s ease-out, background 1s ease-out;
+        transition-delay: 0.2s;
+        z-index: 1;
+        .burger-container {
+            position: relative;
+            display: inline-block;
+            height: 50px;
+            width: 50px;
+            cursor: pointer;
+            transform: rotate(0deg);
+            transition: all 0.3s $cubic;
+            user-select: none;
+            -webkit-tap-highlight-color: transparent;
+            #burger {
+                width: 18px;
+                height: 8px;
+                position: relative;
+                display: block;
+                margin: -4px auto 0;
+                top: 50%;
+                .bar {
+                    width: 100%;
+                    height: 1px;
+                    display: block;
+                    position: relative;
+                    background: #FFF;
+                    transition: all 0.3s $cubic;
+                    transition-delay: 0s;
+                    &.topBar {
+                        transform: translateY(0px) rotate(0deg);
+                    }
+                    &.btmBar {
+                        transform: translateY(6px) rotate(0deg);
+                    }
+                }
+            }
+        }
+        .b-icon {
+            display: inline-block;
+            position: absolute;
+            height: 100%;
+            line-height: 50px;
+            width: 50px;
+            height: 50px;
+            text-align: center;
+            color: #FFF;
+            font-size: 22px;
+            left: 50%;
+            transform: translateX(-50%);
+            &.b-icon-bag {
+                right: 0;
+                top: 0;
+                left: auto;
+                transform: translateX(0px);
+                transition: transform 0.5s $cubic;
+                transition-delay: 0.65s;
+            }
+        }
+        ul.menu {
+            position: relative;
+            display: block;
+            padding: 0px 48px 0;
+            list-style: none;
+            li.menu-item {
+                border-bottom: 1px solid #333;
+                margin-top: 5px;
+                transform: scale(1.15) translateY(-30px);
+                opacity: 0;
+                transition: transform 0.5s $cubic, opacity 0.6s $cubic;
+                @for $i from 1 through $menuItems {
+                    &:nth-child(#{$i}) {
+                        transition-delay: #{0.56 - ($i * 0.07)}s;
+                    }
+                }
+                a {
+                    display: block;
+                    position: relative;
+                    color: #FFF;
+                    font-family: $mukta;
+                    font-weight: 100;
+                    text-decoration: none;
+                    font-size: 22px;
+                    line-height: 2.35;
+                    font-weight: 200;
+                    width: 100%;
+                }
+            }
+        }
+        &.menu-opened {
+            height: 100%;
+            background-color: #000;
+            transition: all 0.3s ease-in, background 0.5s ease-in;
+            transition-delay: 0.25s;
+            .menu{
+              visibility: initial !important;
+              opacity: 1 !important;
+            }
+            .burger-container {
+                transform: rotate(90deg);
+                #burger {
+                    .bar {
+                        transition: all 0.4s $cubic;
+                        transition-delay: 0.2s;
+                        &.topBar {
+                            transform: translateY(4px) rotate(45deg);
+                        }
+                        &.btmBar {
+                            transform: translateY(3px) rotate(-45deg);
+                        }
+                    }
+                }
+            }
+            ul.menu {
+                li.menu-item {
+                    transform: scale(1) translateY(0px);
+                    opacity: 1;
+                    @for $i from 1 through $menuItems {
+                        &:nth-child(#{$i}) {
+                            transition-delay: #{0.07 * $i+0.2}s;
+                        }
+                    }
+                }
+            }
+            .b-icon {
+                &.b-icon-bag {
+                    transform: translateX(75px);
+                    transition-delay: 0.3s;
+                }
+            }
+        }
+}
+
+@media(max-width: 600px) {
+  .window{
+    display: initial;
   }
 }
