--- a/scss/index.scss
+++ b/scss/index.scss
@@ -3610,6 +3610,9 @@ $menuItems: 7;
 .window{
   display: none;
 }
+.menu{
+  height: 100vh;
+}
     .header {
         position: fixed;
         display: block;
