--- a/scss/index.scss
+++ b/scss/index.scss
@@ -2668,7 +2668,7 @@ margin-right: 20px;
 }
 .prize-cards{
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   width: 80%;
   flex-wrap: wrap;
@@ -2680,7 +2680,8 @@ margin-right: 20px;
   justify-content: center;
   align-items: center;
   font-style: normal;
-  margin-bottom: 20px;
+  margin-bottom: 50px;
+  margin-right: 50px;
 }
 @media screen and (max-width:1350px) {
   .prize-cards{
@@ -2757,7 +2758,6 @@ $bp-lg: 800px;
     0 4px 4px rgba(0,0,0,0.1), 
     0 8px 8px rgba(0,0,0,0.1),
     0 16px 16px rgba(0,0,0,0.1);
-  
 }
 .card-pr {  
   position: relative;
@@ -2823,7 +2823,6 @@ $bp-lg: 800px;
     transition: transform calc(var(--d) * 2) var(--e);
   }
 }
-
 .content-pr {
   position: relative;
   display: flex;
@@ -3761,4 +3760,20 @@ $menuItems: 7;
 }
 .menu-opened{
   z-index: 1000000;
+}
+@media screen and (max-width:1350px) {
+  .prizecard-2{
+    margin-right: 0px;
+  }
+}
+@media screen and (max-width:449px) {
+   .content-pr li{
+     font-size: 10.5px;
+     line-height: 1.3;
+   }
+}
+@media screen and (max-width:449px) {
+  .beginner{
+    font-size: 1.2rem !important;
+  }
 }
